# tuilib

./: .gitignore  BUGS.md  CMakeLists.txt  Makefile  README.md  TODO  rand  rand.cpp  render  render.cpp  run  test  test.cpp
.cache/clangd/index/: Character.cpp.21BCFE79A9869F3B.idx  InputString.cpp.4988BD3EF560DDB1.idx  Screen.cpp.A19A51A7B8F37132.idx  Surface.cpp.60637DED02679879.idx  input.cpp.C4421A2AD8553D18.idx  test.cpp.D6A76F84B8148536.idx  tui.cpp.F49A8BEBA6CD8E5E.idx  tui.h.5E618B351F0AD4E6.idx
Docs/: Features & Philosophy.md  Goal.md  Notes.md  TODO.md  TUI.md
Docs/.obsidian/: appearance.json  daily-notes.json  graph.json  workspace.json
Docs/.obsidian/themes/Omarchy/: theme.css
Docs/Logs/: 2025-11-07.md  2025-12-07.md
Docs/Notes/: ANSI.md
Docs/Plan/: Input Handling.md  Rendering.md
Docs/Plan/Widgets/: Label.md
Docs/V2/: Ideas.md
Docs/brainstorm/: 01-06-2026.md  11-17-2025.md  11-19-2025.md  11-22-2025.md  11-23-2025.md  12-01-2025.md  12-02-2025.md  12-16-2025.md  12-18-2025.md
Docs/examples/: render.cpp  test  test.cpp
src/: Character.cpp  Screen.cpp  Surface.cpp  api.h  debug.cpp  test.cpp  test.h  tui.cpp  tui.h
src/api/: api.cpp  surface.cpp
src/core/: tui.h
src/core/input/: input.cpp
src/core/rendering/: Character.cpp  InternalSurface.cpp  Screen.cpp  Surface.cpp
src/core/utils/: InputString.cpp
src/core/widgets/: Label.cpp
src/input/: input.cpp
src/rendering/: Character.cpp  Screen.cpp  Surface.cpp
src/utils/: InputString.cpp
src/widgets/: Label.cpp  Label.h
